control-plane/custom-gateway-api/hack/invalid-examples/v1beta1/httproute/duplicate-query-match.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: duplicate-query-match
spec:
  rules:
  - matches:
    - queryParams:
      - name: foo
        value: bar
      - name: foo
        value: bar
