control-plane/custom-gateway-api/hack/invalid-examples/v1beta1/httproute/httproute-portless-backend.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: portless-backend
spec:
  parentRefs:
  - name: prod-web
  rules:
  - backendRefs:
    - name: foo
