control-plane/custom-gateway-api/hack/invalid-examples/v1beta1/httproute/invalid-backend-kind.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: invalid-backend-kind
spec:
  rules:
  - backendRefs:
    - kind: "*"
      name: foo
      port: 80
