control-plane/custom-gateway-api/hack/invalid-examples/v1beta1/httproute/invalid-backend-port.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: invalid-backend-port
spec:
  rules:
  - backendRefs:
    - name: my-service1
      port: 800080
