control-plane/custom-gateway-api/hack/invalid-examples/v1beta1/httproute/invalid-filter-empty.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: invalid-filter-empty
spec:
  rules:
  - filters:
    - type: RequestHeaderModifier
