control-plane/custom-gateway-api/hack/invalid-examples/v1beta1/httproute/invalid-header-name.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: invalid-header-name
spec:
  rules:
  - matches:
    - headers:
      - type: Exact
        name: magic/
        value: foo
