control-plane/custom-gateway-api/hack/invalid-examples/v1beta1/httproute/invalid-httredirect-hostname.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: invalid-backend-port
spec:
  rules:
  - backendRefs:
    - name: my-service
      port: 8080
    filters:
    - type: RequestRedirect
      requestRedirect:
        hostname: "*.consul.networking.io"
