control-plane/custom-gateway-api/hack/invalid-examples/v1beta1/httproute/invalid-path-alphanum-specialchars-mix.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: invalid-path-alphanum-specialchars-mix
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /my[/]path01
