control-plane/custom-gateway-api/hack/invalid-examples/v1beta1/httproute/invalid-path-specialchars.yaml
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: invalid-path-specialchars
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /[]
